fix: broken url

--- a/blog2.html
+++ b/blog2.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>“A Letter from Myself in 2030” | Vedant Lahane</title>
+    <title>Top five Underrated websites | Sumedh Kurhade</title>
     <link rel="stylesheet" href="styles.css" />
 </head>
 
@@ -26,59 +26,57 @@
     </nav>
 
     <div class="container container-center">
-        <h1 class="hero-heading">“A Letter from Myself in 2030”</h1>
-        <small>July, 2020</small>
-        <img class="blog-hero" src="../images/blog2.svg" alt="medium-blog" />
-        <cite>
-            “Reflect upon your present blessings, of which every man has plenty; not on your past misfortunes, of which
-            all men have some.”
-            <br />
-            — Charles Dickens
-        </cite>
-        <hr />
+        <h1 class="hero-heading">Top 5 underrated website that will make your life easier.</h1>
+        <small>Nov, 2022</small>
+        <img class="blog-hero" src="./images/blog2.jfif" alt="medium-blog" />
+        <h1>
+            1. Class Central
+        </h1>
         <p>
-            Never would I have imagined that I made this far. In a world full of copies, how did you managed to stay so
-            original?
+            Helps you to discover free online courses from top universities in the world.
+            Provides best courses on almost any subject, wherever they exist. 
+            It will meet your requirement with all courses they provide.    
         </p>
+        <a  class="link link-secondary" href="https://www.classcentral.com/">Class Central</a>
+        <h1>
+             2. Interview Warmup
+        </h1>
         <p>
-            I still remember Dr. A. P. J. Kalam’s ideas in his book India 2020: A Vision for the New Millennium.
-            Although India being a developing country in 2020, I truly appreciate the efforts WE took to pull off our
-            Sir’s objectives.
+            Finding the job on internet is very easy, 
+            but the journey to land on top job can be a big battle. 
+            Landing on interview is only like half battle won. 
+            So, the next step is to prepare for interview and it can come with anxiety.
+
+            Thanks to Google, it is a website by google that helps you to 
+            prepare for job interview in IT Support, Project Management, UX Design, Data Analytics, E-commerce. 
         </p>
+        <a  class="link link-secondary" href="https://grow.google/certificates/interview-warmup/">Interview Warmup</a>
+        <h1>
+            3. iLovePDF
+        </h1>
         <p>
-            That pandemic, that blemish on the face of the globe, that living misery you’ve gone through, you left no
-            stone unturned to bounce back.
-            The lockdown completely transformed the world’s living culture. Digitalization, which was just a blooming
-            term in your past decades has now unfurled all coordinates on Earth. Though it may sound a bit clichéd,
-            WFH(Work From Home) is now an officially accepted worldwide practice. No offices, No HQs, No work-stations,
-            Nothing! The only sad part is the replacement of humans by AI(Artificial Intelligence).
-            <br />
-            Yes, you read that correctly. It is like “The Survival of the fittest.”
-            <br />
-            There is an abundance of resources to catch up in this race of survival, the survival of ceaselessly scaling
-            up yourself.
+            Every tool you need to work with PDFs in one place. It helps you to edit all your PDFs in seconds.
+            Convert, Split, Merge and many more. Every tool you need to use PDFs, at your fingertips.
+            All are 100% FREE and easy to use! Merge, split, compress, convert, rotate, unlock and watermark PDFs with just a few clicks. 
         </p>
+        <a  class="link link-secondary" href="https://www.iLovePDF.com/">iLovePDF</a>
+        <h1>
+            4. Alternative.To
+        </h1>
         <p>
-            You were fortunate, yours’ was the only time human-to-human interaction existed. Perhaps it still was
-            descending and eventually finished.
-            Emotions hardly matter to us now. An effect of terminating human interaction. I feel very dejected to say
-            that WE didn’t even spare nature. Industrialization totally banished nature’s minuscule existence.
+            AlternativeTo is a internet site which lists alternatives to web-primarily based software, desktop or laptop software program, and cellular apps, and kinds the options by using various standards, it helps to find better alternatives to every software or app. Users can also search by tag to find software, which offers an alternative way of finding related software.
+            Users can also narrow their search by focusing on particular platforms and license types (such as “free for non-commercial use”).    
         </p>
+        <a  class="link link-secondary" href="https://www.alternativeto.net/">Alternative To</a>
+        <h1>
+            5. Pexels
+        </h1>
         <p>
-            As they say “Good always comes with some bad.” So there are a few of many things that really happened in
-            this decade of which the great used to always think of. The world has now collectively agreed to the plan of
-            0(Zero) Gas vehicles and 100% Electric vehicles. 2030, effectively has no new additions of generating
-            capacity from fossil-fuel-based technologies. Objectives for a Clean/Green/Healthy environment are now been
-            laid out to the world and surprisingly everybody understands the gravity of the situation. Transportation
-            delay today is just an issue of the old days.
-            Hyperloop tech has now brought in a completely new revolution. As I said, these are just a few of many
-            things happening in the world.
+            Pexels provides incredible image without paid subscription or in keeping with image use charges.
+            It is a excellent platform for photographers and digital artists who are looking to build a portfolio and recognition. 
+            Here you can get any images and videos for any topics that you want. 
         </p>
-        <p>
-            Encompassing mentions seem balanced so far, right? Even I thought, yes, it is, obviously. Yet, there are
-            some minute but colossal things WE are missing.
-            I will let my present me refer, the past me, to improvise the future US.
-        </p>
+        <a  class="link link-secondary" href="https://www.pexels.com/">Pexelsl</a>
     </div>
     <hr />
     </div>
