--- a/blogs.html
+++ b/blogs.html
@@ -33,6 +33,17 @@
   <ol reversed>
     <div class="container container-center">
       <li>
+        <h1>Top 5 Underrated website that will make your life easier.</h1>
+        <small> Nov, 2020 </small>
+        <p>
+         <h3> 1. Class Central</h3>
+          Helps you to discover free online courses from top universities in the world. Provides best courses...  
+        </p>
+        <a class="link link-primary" href="./blog2.html">read blog</a>
+        <a class="link link-secondary"
+          href="https://medium.com/@sumedhkurhade/top-5-underrated-website-that-will-make-your-life-easier-151ef8330f1a">read on medium</a>
+      </li>
+      <li>
         <h1>👑 King Kohli Comeback 🏏!</h1>
         <small> Nov, 2022 </small>
         <p>
@@ -42,17 +53,7 @@
         <a class="link link-secondary"
           href="https://medium.com/@sumedhkurhade/king-kohli-comeback-f9827c7aafa1">read on medium</a>
       </li>
-      <li>
-        <h1>“Top 5 Underrated website that will make your life easier.”</h1>
-        <small> Nov, 2020 </small>
-        <p>
-          1. Class Central
-          Helps you to discover free online courses from top universities in the world. 
-        </p>
-        <a class="link link-primary" href="./blog2.html">read blog</a>
-        <a class="link link-secondary"
-          href="https://medium.com/@sumedhkurhade/top-5-underrated-website-that-will-make-your-life-easier-151ef8330f1a">read on medium</a>
-      </li>
+      
     </div>
   </ol>
 
